Adjusted the response-div css class, because the 30px padding on the left didn't fix the overlap with the button. Changed the class for the div containging the button to use col-md-2 instead of col-md-1, to fix the overlap issue.

--- a/OHGBabysitterKata/OHGBabysitterKata/Content/Site.css
+++ b/OHGBabysitterKata/OHGBabysitterKata/Content/Site.css
@@ -23,14 +23,14 @@ textarea {
     max-width: 280px;
 }
 
-.textbox-divs{
-    padding-top:10px;
+.textbox-divs {
+    padding-top: 10px;
 }
 
-.button-div{
-    padding-top:30px;
+.button-div {
+    padding-top: 30px;
 }
 
 .response-div {
-    padding: 35px 0px 0px 30px;
+    padding-top: 35px;
 }
